--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "dependencies": {
     "express": "~3.0.0",
-    "mongodb": ">= 0.9.6-7",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
-    "bcrypt-nodejs": "0.0.3"
+    "bcrypt-nodejs": "0.0.3",
+    "mysql": "~2.0.0-rc2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
